# duckdb-opendal

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  Makefile  README.md  description.yml  extension_config.cmake  pyproject.toml  vcpkg.json
.agents/skills/duckdb-upgrade/: SKILL.md
.agents/skills/extension-release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: MainDistributionPipeline.yml
docs/: caching.md  configuration.md  opendal-caller-buffer-read-handoff.md  schemes.md  table_functions.md
opendal/: Cargo.toml  build.rs  cbindgen.toml
opendal/core/: Cargo.toml  cbindgen.toml
opendal/core/src/: error.rs  io.rs  runtime.rs  writer.rs
opendal/src/: capability.rs  error.rs  io.rs  layers.rs  lib.rs  lister.rs  mutate.rs  opendal_extension.cpp  opendal_filesystem.cpp  opendal_secret.cpp  opendal_table_functions.cpp  operator.rs  reader.rs  stat.rs  table.rs  uri.rs  writer.rs
opendal/src/config/: cache.rs  io.rs  mod.rs  retry.rs  timeout.rs  value.rs
opendal/src/include/: opendal_extension.hpp  opendal_filesystem.hpp  opendal_secret.hpp  opendal_table_functions.hpp  rust.h
opendalfs-core/: Cargo.toml  build.rs  cbindgen.toml
opendalfs-core/src/: capability.rs  error.rs  ffi.rs  io.rs  layers.rs  lib.rs  lister.rs  mutate.rs  operator.rs  reader.rs  runtime.rs  stat.rs  uri.rs  writer.rs
scripts/: s3_fault_proxy.py  s3_test_seed.sh
src/: opendal_extension.cpp  opendal_filesystem.cpp  opendal_fs_extension.cpp  opendal_secret.cpp  opendal_table_functions.cpp  opendalfs_extension.cpp  opendalfs_filesystem.cpp
src/include/: opendal_filesystem.hpp  opendal_fs_extension.hpp  opendal_secret.hpp  opendalfs_extension.hpp  opendalfs_filesystem.hpp
test/configs/: auth_fs.sql  auth_memory.sql  auth_s3.sql  fs.json  memory.json  s3.json
test/services/: plan.py
test/services/s3/: docker-compose.yml  fault_proxy.py
test/sql/: opendal.test  opendal_fs.test  opendal_fs_s3.test  opendal_s3.test  opendalfs.test
test/sql/common/: capabilities.test  coexistence.test  copy.test  errors.test  external_read.test  glob.test  global_config.test  layers.test  listing.test  logging.test  read.test  secret_config.test  uri_parsing.test  write.test
test/sql/services/: fs.test  s3.test
