[package]
name = "duckdb-opendal"
version = "0.1.0"

description = "OpenDAL FFI core for the duckdb-opendal filesystem extension"
edition = "2021"
license = "MIT"
rust-version = "1.91"

[lib]
crate-type = ["staticlib"]

[profile.release]
# Never abort the DuckDB host on a Rust panic; panics are caught at the FFI boundary.
codegen-units = 1
lto = true
panic = "unwind"
strip = true

[features]
# Compiled-in OpenDAL services; each maps to opendal/services-<name>. Build a
# subset with `--no-default-features --features services-<name>`.
default = ["services-memory", "services-fs", "services-s3"]
services-fs = ["opendal/services-fs"]
services-memory = ["opendal/services-memory"]
services-s3 = ["opendal/services-s3"]

[dependencies.opendal]
default-features = false
features = [
  "executors-tokio",
  "http-transport-reqwest-rustls-no-provider",
  "layers-retry",
  "layers-timeout",
  "layers-concurrent-limit",
  "layers-foyer",
]
git = "https://github.com/apache/opendal.git"
rev = "318051086ba99a2c02ac2492105faf4aceb73815"

[dependencies]
bytes = "1"
foyer = "0.22" # match opendal-layer-foyer's transitive version
futures = "0.3"
human-units = { version = "=0.5.4", default-features = false, features = [
  "std",
  "iec-units",
] }
opendal-http-transport-reqwest = { git = "https://github.com/apache/opendal.git", rev = "318051086ba99a2c02ac2492105faf4aceb73815", default-features = false, features = [
  "rustls-no-provider",
] }
percent-encoding = "2"
# ring provider, not the default aws-lc-rs: aws-lc-sys fails its ARMv8 asm build
# under MSVC on windows_arm64.
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
  "logging",
] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
cbindgen = "0.29"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
