[package]
name = "opendalfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenDAL FFI core for the duckdb-opendal filesystem extension"

[lib]
# Static link into the DuckDB C++ extension (via Corrosion).
crate-type = ["staticlib"]

[dependencies]
# Pinned per plan §2. We keep OpenDAL's default features and add only the
# extras we need. The `default` set (0.58.0) already includes
# auto-register-services, executors-tokio, layers-retry/timeout/concurrent-limit,
# layers-logging, and `http-transport-reqwest` — the reqwest transport with
# rustls TLS (RFC 7749 moved TLS out of core into this feature; it replaces the
# old `reqwest-rustls-tls` flag). So HTTPS object-store access works out of the
# box; no explicit TLS feature is required.
opendal = { version = "0.58.0", features = [
    # Foyer hybrid (memory + disk) cache layer (Phase 5), opt-in per secret.
    "layers-foyer",
    "services-memory",
    "services-fs",
    "services-s3",
] }
# foyer builder types for constructing the hybrid cache used by FoyerLayer.
# Pinned to match opendal-layer-foyer's transitive foyer version.
foyer = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
# Used to enumerate an operator's Capability generically (it derives Serialize),
# so we don't hand-maintain a list of ~50 capability fields.
serde_json = "1"

[build-dependencies]
cbindgen = "0.29"
# Parse Cargo.toml (TOML) to resolve the opendal version at build time. Already
# in the build-dep tree via cbindgen, so this adds no new crate.
toml = "0.9"

[dev-dependencies]
tempfile = "3"
