[package]
name = "opendalfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenDAL FFI core for the duckdb-opendal filesystem extension"

[lib]
# Static link into the DuckDB C++ extension (via Corrosion).
crate-type = ["staticlib"]

[dependencies]
# default-features off so we pick the rustls crypto provider (ring, not the
# default aws-lc-rs — aws-lc-sys fails its ARMv8 asm build under MSVC on
opendal = { version = "0.58.0", default-features = false, features = [
    "executors-tokio",
    "http-transport-reqwest-rustls-no-provider",

    # layers
    "layers-retry",
    "layers-timeout",
    "layers-concurrent-limit",
    "layers-foyer",

    # services
    "services-memory",
    "services-fs",
    "services-s3",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
opendal-http-transport-reqwest = { version = "0.58.0", default-features = false, features = ["rustls-no-provider"] }
# Match opendal-layer-foyer's transitive foyer version.
foyer = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
# Capability is serialized to enumerate its bool fields generically.
serde_json = "1"
# BufMut for the zero-extra-copy Reader::read_into path.
bytes = "1"

[build-dependencies]
cbindgen = "0.29"
# Resolve the opendal version from Cargo.toml at build time.
toml = "0.9"

[dev-dependencies]
tempfile = "3"
